Kubernates/project1/k8s/frontendeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: employeemanagement
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template: 
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: heyrohhh/employefrontend:v2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: employeemanagement
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
